--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "servicio rest con node",
   "main": "index.js",
   "scripts": {
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Miguel Ramos",
