--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1",
-    "mongoose-delete": "^0.5.4",
-    "multer": "^1.4.5-lts.1",
-    "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0"
+    "multer": "^1.4.5-lts.1"
   }
 }
